[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/CreateCharacterScreen/Sprites/Male/Body/light.png" type="Texture" id=1]
[ext_resource path="res://Entity/Player/Sprites/SpriteWithBodyAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CreateCharacterScreen/CreateCharacterScreen.gd" type="Script" id=3]
[ext_resource path="res://SegoeUIRegular16.tres" type="DynamicFont" id=4]
[ext_resource path="res://segoeuil16.tres" type="DynamicFont" id=5]
[ext_resource path="res://SegoeUIRegular24.tres" type="DynamicFont" id=6]

[node name="CreateCharacterScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Screen"]
anchor_right = 1.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Screen/VBoxContainer"]
margin_right = 960.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Create your character"
align = 1

[node name="SpritesWithAnimPreview" type="Control" parent="Screen/VBoxContainer"]
margin_top = 27.0
margin_right = 960.0
margin_bottom = 91.0
rect_min_size = Vector2( 64, 64 )

[node name="Body" parent="Screen/VBoxContainer/SpritesWithAnimPreview" instance=ExtResource( 2 )]
position = Vector2( 416, -44.4975 )
texture = ExtResource( 1 )
centered = false

[node name="Hair" parent="Screen/VBoxContainer/SpritesWithAnimPreview" instance=ExtResource( 2 )]
position = Vector2( 416, -44.4975 )
texture = ExtResource( 1 )
centered = false

[node name="Eyes" parent="Screen/VBoxContainer/SpritesWithAnimPreview" instance=ExtResource( 2 )]
position = Vector2( 416, -44.4975 )
texture = null
centered = false

[node name="Label" type="Label" parent="Screen/VBoxContainer/SpritesWithAnimPreview"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -435.0
margin_top = -11.5
margin_bottom = 11.5
custom_fonts/font = ExtResource( 5 )
text = "Use WASD to turn your character!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="Screen/VBoxContainer/SpritesWithAnimPreview"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 156.271
margin_top = -19.5
margin_right = 316.271
margin_bottom = 19.5
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.364706, 1, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.741176, 0, 1 )
text = "Finish Creating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Screen/VBoxContainer"]
margin_top = 95.0
margin_right = 960.0
margin_bottom = 167.0
alignment = 1

[node name="SelectGender" type="VBoxContainer" parent="Screen/VBoxContainer/Buttons"]
margin_left = 442.0
margin_right = 517.0
margin_bottom = 72.0

[node name="TitleContainer" type="PanelContainer" parent="Screen/VBoxContainer/Buttons/SelectGender"]
margin_right = 75.0
margin_bottom = 37.0

[node name="Title" type="Label" parent="Screen/VBoxContainer/Buttons/SelectGender/TitleContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 68.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "Gender"
align = 1
valign = 1

[node name="GenderCheck" type="CheckBox" parent="Screen/VBoxContainer/Buttons/SelectGender"]
margin_top = 41.0
margin_right = 75.0
margin_bottom = 72.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
text = "Female"
align = 1
